<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RestaurantMenu">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar"
        android:text="@string/menu"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:layout_below="@+id/toolbar"
        android:textColor="#000000"
        android:text="@string/choose_from_menu_listed_below"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textView"
        android:background="#65000000"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_above="@+id/btnProceedToCart"
        android:layout_margin="5dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnProceedToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proceed_to_cart"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>







</RelativeLayout>